chore: replace default favicon with custom icon

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8"/>
-    <title>Escuela MX</title>
+    <title>Escuela</title>
 
     <base href="/"/>
 
@@ -13,7 +13,9 @@
     <meta name="msapplication-tap-highlight" content="no"/>
 
 
-    <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/icon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
 
     <!-- add to homescreen for ios -->
     <meta name="mobile-web-app-capable" content="yes"/>
